--- a/iFioriDiTania/src/main/resources/templates/admin/pagine_mazzo_amministratore/PaginaAggiungiMazzo.html
+++ b/iFioriDiTania/src/main/resources/templates/admin/pagine_mazzo_amministratore/PaginaAggiungiMazzo.html
@@ -20,6 +20,10 @@
 	            <textarea th:field="*{descrizione_mazzo}"></textarea>
 	        </div>
 	        <div>
+	            <label>categoria:</label>
+	            <textarea th:field="*{categoria_mazzo}"></textarea>
+	        </div>
+	        <div>
 	            <label>Archiviato:</label>
 	            <input type="checkbox" th:field="*{archiviato_mazzo}" />
 	        </div>
