--- a/iFioriDiTania/src/main/resources/templates/fragments/headernav.html
+++ b/iFioriDiTania/src/main/resources/templates/fragments/headernav.html
@@ -19,22 +19,23 @@
 			<ul class="nav-links" id="nav-links">
 			    <li><a th:href="@{/fiori}">Fiori</a></li>
 			    <li><a th:href="@{/piante}">Piante</a></li>
+			    <li><a th:href="@{/mazzi}">Bouquet</a></li>
 			    <li><a th:href="@{/servizi}">Servizi</a></li>
 			    <li><a th:href="@{/accessori}">Accessori</a></li>
 			    
 			    <li><a th:href="@{/}">Chi Siamo</a></li>
 			    <li><a th:href="@{/gatti}">Colonia Felina</a></li>
-				<li th:if="${#authentication.principal instanceof T(org.springframework.security.oauth2.core.oidc.user.OidcUser)}"||"${#authentication.principal instanceof T(org.springframework.security.core.userdetails.UserDetails)}"><a th:href="@{/user}">Profilo</a></li>
+			<li th:if="${#authentication.principal instanceof T(org.springframework.security.oauth2.core.oidc.user.OidcUser) || #authentication.principal instanceof T(org.springframework.security.core.userdetails.UserDetails)}"><a th:href="@{/user}">Profilo</a></li>
 			</ul>
 
 	    </div>
 	    <div class="userAccess">
 			<div class="logo-login">
-			  <a th:unless="${#authentication.principal instanceof T(org.springframework.security.oauth2.core.oidc.user.OidcUser)}"||"${#authentication.principal instanceof T(org.springframework.security.core.userdetails.UserDetails)}" th:href="@{/login}">
+			  <a th:unless="${#authentication.principal instanceof T(org.springframework.security.oauth2.core.oidc.user.OidcUser) || #authentication.principal instanceof T(org.springframework.security.core.userdetails.UserDetails)}" th:href="@{/login}">
 					  <img th:src="@{/images/user.png}" alt="Logo">
 					</a>
 			</div>
-		  <a th:if="${#authentication.principal instanceof T(org.springframework.security.oauth2.core.oidc.user.OidcUser)}"||"${#authentication.principal instanceof T(org.springframework.security.core.userdetails.UserDetails)}"  href="/logout">  <button>logout</button></a>
+		  <a th:if="${#authentication.principal instanceof T(org.springframework.security.oauth2.core.oidc.user.OidcUser) || #authentication.principal instanceof T(org.springframework.security.core.userdetails.UserDetails)}"  href="/logout">  <button>logout</button></a>
 	  </div>
 	  </div>  
 	</header>
