--- a/iFioriDiTania/src/main/resources/templates/fiori.html
+++ b/iFioriDiTania/src/main/resources/templates/fiori.html
@@ -10,15 +10,19 @@
     <h1>Elenco di tutti i fiori</h1>
 	
 
-	    <div class="box-categorie">
-			<div class="categoria-card" th:each="categoria : ${tutte_categorie_fiori}" th:href="'#' + ${categoria}" th:style="'background-image: url(\'/images/foto_fiori/foto_categorie/' + ${categoria} + '.jpg\');'">
-  				  <!-- Contenuto della div per la categoria -->
-  				 <a th:href="'#' + ${categoria}" ></a>
-   				 <h2 th:text="${categoria}"></h2>
-			</div>
+    	<div class="carousel-container" id="carouselContainer4">
+	    	<div class="box-categorie-slider" id="carouselWrapper4"><!-- wrapper -->
+				<div class="categoria-card-slider" th:each="categoria : ${tutte_categorie_fiori}" th:href="'#' + ${categoria}" th:style="'background-image: url(\'/images/foto_fiori/foto_categorie/' + ${categoria} + '.jpg\');'"><!-- item -->
+	  				  <!-- Contenuto della div per la categoria -->
+	  				 <a th:href="'#' + ${categoria}" ></a>
+	   				 <h2 th:text="${categoria}"></h2>
+				</div>
 
-	    
-	    </div>
+		    </div>
+		    	<button class="carousel-btn previous" onclick="prevSlide('carouselWrapper4')">&#8592;</button>
+        		<button class="carousel-btn next" onclick="nextSlide('carouselWrapper4')">&#8594;</button>
+		 </div>   
+
 	</div>
 	<div class="contenitore-di-categorie"  ><!-- Definisco larghezza -->
 	    <div style="width: 80%;"><!-- Definisco box interno con 80% larghezza -->
@@ -45,5 +49,63 @@
 	
 	<div th:replace="~{fragments/backToTop :: backToTop}"></div>
     <div th:replace="~{fragments/footernav :: footernav}"></div>
+    	    <script >
+	    let autoSlideInterval;
+
+	    function showSlide(wrapperId, index) {
+	        const carouselWrapper = document.getElementById(wrapperId);
+	        const totalSlides = carouselWrapper.children.length;
+
+	        carouselWrapper.style.transition = 'none';
+	        carouselWrapper.appendChild(carouselWrapper.children[0]);
+	        carouselWrapper.style.transform = 'translateX(0)';
+	        currentSlide = totalSlides - 1;
+	    }
+
+	    function nextSlide(wrapperId) {
+	        const carouselWrapper = document.getElementById(wrapperId);
+	        const totalSlides = carouselWrapper.children.length;
+
+	        carouselWrapper.style.transition = 'none';
+	        carouselWrapper.appendChild(carouselWrapper.children[0]);
+	        carouselWrapper.style.transform = 'translateX(0)';
+	        currentSlide = totalSlides - 1;
+	    }
+
+	    function prevSlide(wrapperId) {
+	        const carouselWrapper = document.getElementById(wrapperId);
+	        const totalSlides = carouselWrapper.children.length;
+
+	        carouselWrapper.insertBefore(carouselWrapper.children[totalSlides - 1], carouselWrapper.children[0]);
+
+	        currentSlide = (currentSlide - 1 + totalSlides) % totalSlides;
+
+	        carouselWrapper.style.transition = 'none';
+	        carouselWrapper.style.transform = `translateX(0)`;
+	    }
+
+	    function startAutoSlide(wrapperId) {
+	        autoSlideInterval = setInterval(() => nextSlide(wrapperId), 2000);
+	    }
+
+	    function stopAutoSlide() {
+	        clearInterval(autoSlideInterval);
+	    }
+
+	    document.addEventListener('DOMContentLoaded', () => {
+	        showSlide('carouselWrapper1', 0);
+	        showSlide('carouselWrapper2', 0);
+	        startAutoSlide('carouselWrapper1');
+	        startAutoSlide('carouselWrapper2');
+
+	        document.querySelector('#carouselContainer1').addEventListener('mouseover', stopAutoSlide);
+	        document.querySelector('#carouselContainer1').addEventListener('mouseout', () => startAutoSlide('carouselWrapper1'));
+
+	        document.querySelector('#carouselContainer2').addEventListener('mouseover', stopAutoSlide);
+	        document.querySelector('#carouselContainer2').addEventListener('mouseout', () => startAutoSlide('carouselWrapper2'));
+	    });
+
+	    
+	    </script>
 </body>
 </html>
