--- a/iFioriDiTania/src/main/resources/templates/recensione.html
+++ b/iFioriDiTania/src/main/resources/templates/recensione.html
@@ -64,8 +64,8 @@
     <div class="contenitore-hero" style="min-height:40vh;display: flex;flex-direction: row;">
         
         <div style="display: flex;flex-direction: column;justify-content: center;align-items: center;margin-right: 10vh;">
-        <h1 th:text="${recensione.titolo_recensione}"></h1>
-        <p><span th:text="${recensione.contenuto_recensione}"></span></p>
+        <h1 th:text="${recensione.descrizione_recensione}"></h1>
+        
         </div>
         <div >
             
